@@ -2,4 +2,5 @@
 aclocal $ACLOCAL_FLAGS
 automake -a
 autoconf
+autofig autotrace-config.af
 
